...
      "comment" : "The text for a button that closes a sheet.",
      "isCommentAutoGenerated" : true,
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Close"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cerrar"
...
    "tip_check_title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Trained today?"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "¿Entrenaste hoy?"
...
